implement general css code

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,1 +1,8 @@
+// variables to change the overall theme quickly
+@import "variables";
 
+// some helper css classes that are handy
+@import "helpers";
+
+// common css code
+@import "common";
